# cGraphicalManipulator

./: CMakeLists.txt  README.md
examples/: test.c  test_program
include/: cGraphicalManipulator.h
src/: cGraphicalManipulator.c
